--- a/Frontend/RestaurantProject/src/App.css
+++ b/Frontend/RestaurantProject/src/App.css
@@ -94,5 +94,27 @@
   }
 }
 
+.managerPageDiv {
+  display: flex;
+  position: relative;
+}
+
+.buttonsManagerPage {
+  display: flex;
+  margin-left: 40px;
+  flex-direction: column;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 10px;
+  left: 0px;
+}
+
+
+
+
+
+
+
 
 
